[WIP] "3 streams" attach implementation
This is a proof of concept for using Swagger to implement 3
individual streams for stdio from the container.  Instead of
using a middleware and hijacking in the portlayer, it tries
to play nice with standard swagger mechanisms.
