# apiservers/portlayer/swagger.yml
@@ -513,6 +513,118 @@ paths:
             $ref: "#/definitions/Error"
         '200':
           description: "OK"
+  /interaction/{id}/stdin:
+    post:
+      definitions: "Set a stdin for the container"
+      summary: "Set stdin"
+      operationId: ContainerSetStdin
+      tags: ["interaction"]
+      consumes:
+        - application/raw-stream
+        # - application/json
+      parameters:
+        - name: id
+          in: path
+          type: string
+          required: true
+        - name: raw_stream
+          in: body
+          schema:
+            type: string
+            format: binary
+      responses:
+        '500':
+          description: "Failed to Set stdin"
+          schema:
+            $ref: "#/definitions/Error"
+        '404':
+          description: "Container not found"
+          schema:
+            $ref: "#/definitions/Error"
+        '200':
+          description: "OK"
+  /interaction/{id}/stdout:
+    get:
+      definitions: "Get a stdout for the container"
+      summary: "Get stdout"
+      operationId: ContainerGetStdout
+      tags: ["interaction"]
+      consumes:
+        - application/octet-stream
+      produces:
+        - application/octet-stream
+      parameters:
+        - name: id
+          in: path
+          type: string
+          required: true
+      responses:
+        '500':
+          description: "Failed to get stdout"
+          schema:
+            $ref: "#/definitions/Error"
+        '404':
+          description: "Container not found"
+          schema:
+            $ref: "#/definitions/Error"
+        '200':
+          description: "OK"
+          schema:
+            format: binary
+  /interaction/{id}/stderr:
+    get:
+      definitions: "Get a stderr for the container"
+      summary: "Get stderr"
+      operationId: ContainerGetStderr
+      tags: ["interaction"]
+      consumes:
+        - application/octet-stream
+      produces:
+        - application/octet-stream
+      parameters:
+        - name: id
+          in: path
+          type: string
+          required: true
+      responses:
+        '500':
+          description: "Failed to get stderr"
+          schema:
+            $ref: "#/definitions/Error"
+        '404':
+          description: "Container not found"
+          schema:
+            $ref: "#/definitions/Error"
+        '200':
+          description: "OK"
+          schema:
+            format: binary
+  /interaction/{id}/sdtio:
+    delete:
+      definitions: "Detatches all sdio streams to/from the container"
+      summary: "Detaches the stream"
+      operationId: ContainerDetachStdio
+      tags: ["interaction"]
+      consumes:
+        - application/octet-stream
+      produces:
+        - application/octet-stream
+      parameters:
+        - name: id
+          in: path
+          type: string
+          required: true
+      responses:    
+        '500':
+          description: "Failed to detach"
+          schema:
+            $ref: "#/definitions/Error"
+        '404':
+          description: "Container not found"
+          schema:
+            $ref: "#/definitions/Error"
+        '200':
+          description: "OK"    
 definitions:
   Error:
     type: object
